--- a/config.conf
+++ b/config.conf
@@ -21,12 +21,8 @@
 
 # here write your login and password
 declare -A huawei_account_login=(
-[login0]="<--here login-->"
-[password0]="<--here password-->"
-[login1]="<--here login-->"
-[password1]="<--here password-->"
-[login2]="<--here login-->"
-[password2]="<--here password-->"
+[login0]="user"
+[password0]="passwd"
 )
 
 
@@ -43,7 +39,5 @@ declare -A huawei_account_login=(
 #)    
 
 declare -A kiosk_mode_url_array=( 
-[kioskmode0]="<--here URL-->" 
-[kioskmode1]="<--here URL-->" 
-[kioskmode2]="<--here URL-->" 
+[kioskmode0]="https://region04eu5.fusionsolar.huawei.com/pvmswebsite/nologin/assets/build/index.html#/kiosk?kk=DfroEJoKkOyNbwyl3trexckuNgEk8KEm"
 ) 
